--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-# REACT_APP_API_BASE_URL=http://localhost:8000
-# REACT_APP_API_OWN_URL=http://localhost:3000
+REACT_APP_API_BASE_URL=http://localhost:8000
+REACT_APP_API_OWN_URL=http://localhost:3000
 
-REACT_APP_API_BASE_URL=https://location-qxki.onrender.com
-REACT_APP_API_OWN_URL=https://marklogistics.netlify.app
+# REACT_APP_API_BASE_URL=https://location-qxki.onrender.com
+# REACT_APP_API_OWN_URL=https://marklogistics.netlify.app
     
