--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "merikitaab",
+  "name": "marklogistics",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,10 +14,12 @@
     "leaflet": "^1.9.4",
     "npm": "^10.8.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.3",
     "react-toastify": "^10.0.5",
     "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4",
