--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,13 @@
 {
-  "short_name": "Mark Logistics",
-  "name": "Mark Logistics",
+  "short_name": "Mark Transit",
+  "name": "Mark Transit",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
+      "src": "maskable-icon.png",
       "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "maskable" 
+
     }
   ],
   "start_url": ".",
